// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAvatar /> renders correctly 1`] = `
<span
  className="mr-10"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <img
    alt=""
    className="img-circle object-cover user-avatar"
    src="http://media12/profileAvatar.jpg"
    style={
      Object {
        "height": "16px",
        "width": "16px",
      }
    }
  />
</span>
`;

exports[`<UserAvatar /> renders correctly user without avatar 1`] = `
<span
  className=""
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <DefaultAvatar
    className="img-circle avatar mr-0 user-avatar"
    size={16}
  />
</span>
`;

exports[`<UserAvatar /> renders correctly with custom default avatar 1`] = `
<span
  className=""
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <img
    alt=""
    className="img-circle object-cover user-avatar"
    src="http://avatar/customAvatar.jpg"
    style={
      Object {
        "height": "16px",
        "width": "16px",
      }
    }
  />
</span>
`;
